fix: remove vertical scrollbar on iframe

--- a/hlx_statics/blocks/iframe/iframe.css
+++ b/hlx_statics/blocks/iframe/iframe.css
@@ -9,6 +9,10 @@ main div.iframe-wrapper iframe.iframe-container {
   border: none;
 }
 
+main div.iframe-wrapper iframe.full-height {
+  overflow: hidden;
+}
+
 main div.iframe-wrapper {
   align-items: center;
   justify-content: center;
